// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionSender > should not render delegate icon 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionSender"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Sender
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="w-0 flex-1 overflow-auto text-right md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center -space-x-1"
    >
      <div
        class="border-theme-text text-theme-text dark:border-theme-secondary-600 dark:text-theme-secondary-600 ring-theme-background duration-100 css-1nqcsx"
      >
        <div
          class="css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg
            id="delegate-registration"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="2"
            >
              <path
                d="M16.73 1L6.43 19"
              />
              <path
                d="M6.73 6.9c1.4 0 2.7-1.1 2.7-2.7 0-1.5-1.2-2.7-2.7-2.7s-2.7 1.2-2.7 2.7h0c0 1.5 1.1 2.7 2.7 2.7zM8.63 9.8c-.6-.3-1.2-.5-1.9-.5-2.5 0-4.4 2-4.4 4.4M14.97 18.4c1.4 0 2.7-1.1 2.7-2.7 0-1.5-1.2-2.7-2.7-2.7s-2.7 1.2-2.7 2.7h0c0 1.5 1.1 2.7 2.7 2.7z"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="shrink-0 css-1n9jllj"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
            title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionSender > should render 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionSender"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Sender
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="w-0 flex-1 overflow-auto text-right md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center -space-x-1"
    >
      <div
        class="shrink-0 css-1n9jllj"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
            title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionSender > should render with address 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionSender"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Sender
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="w-0 flex-1 overflow-auto text-right md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
              data-testid="Address__address"
            >
              test-address
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center -space-x-1"
    >
      <div
        class="shrink-0 css-1n9jllj"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="test-address"
            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(3, 169, 244)" width="100" height="100"/><circle r="55" cx="0" cy="50" fill="rgb(255, 193, 7)"/><circle r="40" cx="100" cy="40" fill="rgb(33, 150, 243)"/><circle r="35" cx="20" cy="30" fill="rgb(255, 87, 34)"/></svg>"
            title="test-address"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionSender > should render with alias 1`] = `
<div>
  <div
    class="no-ligatures css-qu17s6"
    data-testid="TransactionSender"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Sender
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="w-0 flex-1 overflow-auto text-right md:text-left"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="font-semibold text-base text-theme-text"
              data-testid="Address__alias"
            >
              <span
                class="no-ligatures css-9nx3be"
                data-testid="TruncateEnd"
              >
                ARK Wallet 1
              </span>
            </span>
            <span
              class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center -space-x-1"
    >
      <div
        class="shrink-0 css-1n9jllj"
        data-testid="Avatar"
      >
        <div
          class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
        >
          <img
            alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
            title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
